<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutMe.About_Developer">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:src="@drawable/arifalfaz"></ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="35dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="About\nDeveloper"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:textSize="20sp"></TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/youtube1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="170dp"
                android:layout_marginTop="130dp"
                android:src="@drawable/youtube"></ImageView>

            <ImageView
                android:id="@+id/telegram1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="130dp"
                android:src="@drawable/telegram"></ImageView>

            <ImageView
                android:id="@+id/facebook1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="130dp"
                android:src="@drawable/facebook"></ImageView>

            <ImageView
                android:id="@+id/Instagram1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="130dp"
                android:src="@drawable/instagram"></ImageView>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/convergence"
                    android:text="About me"
                    android:textColor="@color/blue"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/convergence"
                    android:text="@string/about"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="19sp"></TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/convergence"
                    android:text="About To Do Success App"
                    android:textColor="@color/blue"
                    android:textSize="25sp" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="2.0dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/blue"></TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/convergence"
                    android:text="@string/ToDoSuccess"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="19sp"></TextView>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="2.0dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/blue"></TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/convergence"
                    android:text="@string/Pomodoro"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="18sp"></TextView>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="2.0dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/blue"></TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font"
                    android:text="Thank you!\nYour Friend"
                    android:textAlignment="center"
                    android:textColor="@color/blue"
                    android:textSize="22sp"
                    android:textStyle="bold"></TextView>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="2.0dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/blue"></TableRow>


            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>